Switched to Python 3.7 and added nengo-spa

--- a/nengo_stroop.yml
+++ b/nengo_stroop.yml
@@ -1,8 +1,9 @@
 dependencies:
-  - python=3.8.0
+  - python=3.7.0
   - numpy=1.17.4
   - ipykernel=5.1.4
   - pip=19.3.1
   - pip:
     - nengo==3.0.0
     - nengo-gui==0.4.5
+    - nengo-spa
