--- a/nengo_stroop.yml
+++ b/nengo_stroop.yml
@@ -2,6 +2,8 @@ dependencies:
   - python=3.7.0
   - numpy=1.17.4
   - ipykernel=5.1.4
+  - scipy=1.4.1
+  - matplotlib=3.1.3
   - pip=19.3.1
   - pip:
     - nengo==3.0.0
